# Healthcare-Report-and-Prescription-Analyser

./: Can you write documentation for my github reposit....md  Project Structure.md  README.md  README_2.md  pyproject.toml
Backend/: agent_data.db  app.py  database.py  memory_service.py  session_service.py
Frontend/: vite.config.js
Frontend/src/: App.jsx  index.css
Frontend/src/components/: Footer.jsx  Hero.jsx  HowItWorks.jsx  Navbar.jsx  OurPromise.jsx  WhatWeDo.jsx  WhoThisIsFor.jsx
Frontend/src/screens/: About.jsx  AiAgentPage.jsx  Contact.jsx  Home.jsx
